--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.5.0",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.2.0"
   },
